--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -16,6 +16,13 @@ body{
   padding: 10px;
   background: linear-gradient(135deg, #71b7e6, #203b75);
 }
+
+.logo {
+  width: 100%;
+  align-items: left;
+
+}
+
 .container{
   max-width: 700px;
   width: 100%;
