--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,8 +1,10 @@
 <app-navbar></app-navbar>
 
 <body>
+
+
   <div class="container">
-    <div class="title">Registrarse</div>
+    <div class="title">Registrarse <img src="https://cdn.pixabay.com/photo/2015/12/11/18/21/quetzal-1088589_1280.png"  width="75px" alt="" ></div>
     <div class="content">
       <form #registerForm="ngForm" (ngSubmit)="register()">
         <div class="user-details">
