--- a/src/app/components/ADMIN/category-places/category-places.component.html
+++ b/src/app/components/ADMIN/category-places/category-places.component.html
@@ -2,69 +2,144 @@
   <app-navbar></app-navbar>
 
   <div *ngIf="token && identity.role === 'ADMIN'" class="text-center mt-2 mb-2">
-    <button class="btn btn-warning m-4" data-bs-toggle="modal" data-bs-target="#addCategory">
+    <button
+      class="btn btn-warning m-4"
+      data-bs-toggle="modal"
+      data-bs-target="#addCategory"
+    >
       <span class="icon">
         <i class="fa fa-globe" aria-hidden="true"></i>
       </span>
-      <span class="text">Agregar categoría de lugares</span>
+      <span class="text"> Agregar categoría de lugares</span>
+    </button>
+    <button class="btn btn-warning m-4" routerLink="/services">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="16"
+        height="16"
+        fill="currentColor"
+        class="bi bi-clipboard-check-fill"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3Zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Z"
+        />
+        <path
+          d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708Z"
+        />
+      </svg>
+      <span class="text"> Ver servicios</span>
     </button>
   </div>
-  <hr *ngIf="token && identity.role === 'ADMIN'">
-  <br>
+  <hr *ngIf="token && identity.role === 'ADMIN'" />
+  <br />
 
   <h1>¿A dónde quieres ir?</h1>
   <div class="wrapper" *ngIf="categorys">
     <div class="card" *ngFor="let category of categorys">
-      <br>
-      <img src="../../../../assets//LOGOTIPO ADVENTURE TOUR GT (2).png" class="card-img-top" alt="...">
-      <hr>
-      <br>
-      <h3 class="card-title">{{category.name}}</h3>
-      <h6 class="card-subtitle mb-2 text-muted">Descripción: {{category.description}}</h6>
-
-      <div *ngIf="token && identity.role === 'CLIENT'"> <button [routerLink]="['/place/' + category._id]"
-          class="card-btn2">Lugares</button> </div>
-      <br>
-
-
-      <div *ngIf="token && identity.role === 'ADMIN'" class="text-center  ms-3">
-        <button (click)="deleteCategory(category._id)" class="btn btn-outline-danger btn-icon-split">Eliminar</button>
-        <button (click)="getCategory(category._id)" class="btn btn-outline-success btn-icon-split m-2"
-          data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
-          aria-controls="offcanvasExample">Actualizar</button>
-        <button [routerLink]="['/place/' + category._id]" class="btn btn-outline-secondary btn-icon-split m-2"
-          data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">Agregar
-          lugares</button>
+      <img
+        src="../../../../assets//LOGOTIPO ADVENTURE TOUR GT (2).png"
+        class="card-img-top"
+        alt="..."
+      />
+      <hr />
+      <h3 class="card-title">{{ category.name }}</h3>
+      <h6 class="card-subtitle mb-2 text-muted">
+        Descripción: {{ category.description }}
+      </h6>
+      <div *ngIf="token && identity.role === 'CLIENT'">
+        <button [routerLink]="['/place/' + category._id]" class="card-btn2">
+          Lugares
+        </button>
+      </div>
+      <br />
+      <div *ngIf="token && identity.role === 'ADMIN'" class="text-center ms-3">
+        <button
+          (click)="deleteCategory(category._id)"
+          class="btn btn-outline-danger btn-icon-split"
+        >
+          Eliminar
+        </button>
+        <button
+          (click)="getCategory(category._id)"
+          class="btn btn-outline-success btn-icon-split m-2"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasExample"
+          aria-controls="offcanvasExample"
+        >
+          Actualizar
+        </button>
+        <button
+          [routerLink]="['/place/' + category._id]"
+          class="btn btn-outline-secondary btn-icon-split m-2"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasExample"
+          aria-controls="offcanvasExample"
+        >
+          Agregar lugares
+        </button>
       </div>
     </div>
   </div>
 
   <!-- Modal Save hotel -->
-  <div class="modal fade" id="addCategory" tabindex="-1" aria-labelledby="addHotelLabel" aria-hidden="true">
+  <div
+    class="modal fade"
+    id="addCategory"
+    tabindex="-1"
+    aria-labelledby="addHotelLabel"
+    aria-hidden="true"
+  >
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="addHotelLabel">Nueva categoría de lugares</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <h5 class="modal-title" id="addHotelLabel">
+            Nueva categoría de lugares
+          </h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
         </div>
         <div class="modal-body">
-
           <form #addCategoryForm="ngForm">
             <div class="mb-3">
               <label for="form-label" class="form-label">Nombre</label>
-              <input [(ngModel)]="category.name" name="name" type="text" class="form-control">
+              <input
+                [(ngModel)]="category.name"
+                name="name"
+                type="text"
+                class="form-control"
+              />
             </div>
             <div class="mb-3">
               <label for="form-label" class="form-label">Descripción</label>
-              <input [(ngModel)]="category.description" name="address" type="text" class="form-control">
+              <input
+                [(ngModel)]="category.description"
+                name="address"
+                type="text"
+                class="form-control"
+              />
             </div>
           </form>
-
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button (click)="saveCategory(addCategoryForm)" type="submit" class="btn btn-primary"
-            data-bs-dismiss="modal">Guardar Cambios
+          <button
+            type="button"
+            class="btn btn-secondary"
+            data-bs-dismiss="modal"
+          >
+            Cerrar
+          </button>
+          <button
+            (click)="saveCategory(addCategoryForm)"
+            type="submit"
+            class="btn btn-primary"
+            data-bs-dismiss="modal"
+          >
+            Guardar Cambios
           </button>
         </div>
       </div>
@@ -72,52 +147,101 @@
   </div>
 
   <!-- off canvas update -->
-  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+  <div
+    class="offcanvas offcanvas-start"
+    tabindex="-1"
+    id="offcanvasExample"
+    aria-labelledby="offcanvasExampleLabel"
+  >
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasExampleLabel">Actualizar Categoria</h5>
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      <h5 class="offcanvas-title" id="offcanvasExampleLabel">
+        Actualizar Categoria
+      </h5>
+      <button
+        type="button"
+        class="btn-close text-reset"
+        data-bs-dismiss="offcanvas"
+        aria-label="Close"
+      ></button>
     </div>
     <div class="offcanvas-body">
-
       <form (ngSubmit)="updateCategory()" *ngIf="categoryUpdate">
         <div class="mb-3">
           <label for="nameUpdate" class="form-label">Nombre</label>
-          <input [(ngModel)]="categoryUpdate.name" name="name" type="text" class="form-control"
-            aria-describedby="emailHelp" id="nameUpdate">
+          <input
+            [(ngModel)]="categoryUpdate.name"
+            name="name"
+            type="text"
+            class="form-control"
+            aria-describedby="emailHelp"
+            id="nameUpdate"
+          />
         </div>
         <div class="mb-3">
           <label for="addressUpdate" class="form-label">Descripción</label>
-          <input [(ngModel)]="categoryUpdate.description" name="description" type="text" class="form-control"
-            id="descriptionUpdate">
+          <input
+            [(ngModel)]="categoryUpdate.description"
+            name="description"
+            type="text"
+            class="form-control"
+            id="descriptionUpdate"
+          />
         </div>
         <div class="text-center">
-          <button type="button" class="btn btn-outline-success mt-4 me-3" data-bs-toggle="modal"
-            data-bs-target="#exampleModal">
+          <button
+            type="button"
+            class="btn btn-outline-success mt-4 me-3"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+          >
             Upload image
           </button>
-          <button type="submit" class="btn btn-outline-primary mt-4">Submit</button>
+          <button type="submit" class="btn btn-outline-primary mt-4">
+            Submit
+          </button>
         </div>
 
-        <button type="submit" class="btn btn-success mt-4" data-bs-dismiss="offcanvas"> Update</button>
+        <button
+          type="submit"
+          class="btn btn-success mt-4"
+          data-bs-dismiss="offcanvas"
+        >
+          Update
+        </button>
       </form>
     </div>
   </div>
 
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Upload image</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
         </div>
         <div class="modal-body">
           <div class="mb-3">
             <label for="image" class="form-label">Select image: </label>
-            <input (change)="filesChange($event)" type="file" class="form-control" id="image">
+            <input
+              (change)="filesChange($event)"
+              type="file"
+              class="form-control"
+              id="image"
+            />
           </div>
         </div>
       </div>
     </div>
   </div>
-
 </body>
