--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,13 +7,75 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../../../assets/imagenes-de-paisajes-de-guatemala-fondo-de-pantalla.jpg" class="d-block w-100" alt="...">
+        <img src="../../../assets/imagenes-de-paisajes-de-guatemala-fondo-de-pantalla.jpg"  width="500" height="870" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block m-5 " style="text-align:center;">
+          <button class="btn btn-warning m-4" routerLink="/services">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-clipboard-check-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3Zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Z"
+              />
+              <path
+                d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708Z"
+              />
+            </svg>
+            <span class="text"> Ver servicios</span>
+          </button>
+        </div>
+
       </div>
       <div class="carousel-item">
-        <img src="../../../assets/Maya_civilization_Guatemala-72879.jpg!d" class="d-block w-100" alt="...">
+        <img src="../../../assets/Maya_civilization_Guatemala-72879.jpg!d"  width="500" height="870" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block m-5 " style="text-align:center;">
+          <button class="btn btn-warning m-4" routerLink="/services">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-clipboard-check-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3Zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Z"
+              />
+              <path
+                d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708Z"
+              />
+            </svg>
+            <span class="text"> Ver servicios</span>
+          </button>
+        </div>
       </div>
       <div class="carousel-item">
-        <img src="../../../assets/street_old_city_urban_mountains_color_canon_town-404905.jpg!d" class="d-block w-100" alt="...">
+        <img src="../../../assets/street_old_city_urban_mountains_color_canon_town-404905.jpg!d" 
+        class="d-block w-100" alt="..."  width="500" height="870">
+        <div class="carousel-caption d-none d-md-block m-5 " height="60px" style="text-align:center;">          
+          <button class="btn btn-warning " height="870" routerLink="/services">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-clipboard-check-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M6.5 0A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3Zm3 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3Z"
+              />
+              <path
+                d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1A2.5 2.5 0 0 1 9.5 5h-3A2.5 2.5 0 0 1 4 2.5v-1Zm6.854 7.354-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708.708Z"
+              />
+            </svg>
+            <span class="text"> Ver servicios</span>
+          </button>
+        </div>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -25,3 +87,5 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+
+  <div id="footer">All rights reserved &copy; 2022 Kinal-IN6AV-G1</div>
