--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,9 @@
 <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 
-    <div class="logo"></div>
+    <div class="logo">
+        <img src="https://cdn.pixabay.com/photo/2015/12/11/18/21/quetzal-1088589_1280.png" width="200px" alt="" >
+    </div>
     <div class="login-block">
         <form  #loginForm="ngForm" (ngSubmit)="login()">
         <h1>Login</h1>
@@ -21,6 +23,7 @@
             </div>
         </div>
     </div>
+    <br>
   
 
 
