--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,5 @@
-<app-navbar></app-navbar>
+<body>
+  <app-navbar></app-navbar>
 <br />
 
 <link
@@ -20,8 +21,8 @@
           <div class="row">
             <div class="col-sm-2 hidden-xs">
               <img
-                src="../../../assets/LOGOTIPO ADVENTURE TOUR GT (1).png"
-                width="100px"
+              src="../../../../assets//LOGOTIPO ADVENTURE TOUR GT (2).png"
+              width="100px"
                 alt="..."
                 class="img-responsive"
               />
@@ -86,8 +87,8 @@
           <div class="row">
             <div class="col-sm-2 hidden-xs">
               <img
-                src="../../../assets/LOGOTIPO ADVENTURE TOUR GT (1).png"
-                width="100px"
+              src="../../../../assets//LOGOTIPO ADVENTURE TOUR GT (2).png"
+              width="100px"
                 alt="..."
                 class="img-responsive"
               />
@@ -198,7 +199,7 @@
         <button
           data-bs-toggle="modal"
           data-bs-target="#exampleModal2"
-          (click)="addInvoice(addInvoiceForm)"
+          (click)="addInvoice(addInvoiceForm);"
           type="submit"
           class="btn btn-primary"
         >
@@ -211,7 +212,7 @@
 
 <!-- Modal -->
 <div
-  class="modal fade"
+  class="modal fade "
   id="exampleModal2"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
@@ -221,7 +222,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Factura</h5>
-        <button
+        <button (click)="refresh()"
           type="button"
           class="btn-close"
           data-bs-dismiss="modal"
@@ -254,7 +255,7 @@
                           <a
                             href="javascript:;"
                             onclick="window.print()"
-                            class="btn btn-sm btn-white m-b-10 p-l-5"
+                            class="btn btn-sm btn-white d-print-none"
                             ><i class="fa fa-print t-plus-1 fa-fw fa-lg"></i>
                             Print</a
                           >
@@ -397,3 +398,5 @@
     </div>
   </div>
 </div>
+
+</body>
