Se agregaron cambios al estilo de la pagina

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
       <div class="carousel-item active">
         <img src="../../../assets/imagenes-de-paisajes-de-guatemala-fondo-de-pantalla.jpg"  width="500" height="870" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block m-5 " style="text-align:center;">
-          <button class="btn btn-warning m-4" routerLink="/services">
+          <button class="btn btn-warning m-4 position-relative" routerLink="/services">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -33,7 +33,7 @@
       <div class="carousel-item">
         <img src="../../../assets/Maya_civilization_Guatemala-72879.jpg!d"  width="500" height="870" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block m-5 " style="text-align:center;">
-          <button class="btn btn-warning m-4" routerLink="/services">
+          <button class="btn btn-warning m-4 position-relative" routerLink="/services">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -53,11 +53,13 @@
           </button>
         </div>
       </div>
+
+    
       <div class="carousel-item">
         <img src="../../../assets/street_old_city_urban_mountains_color_canon_town-404905.jpg!d" 
-        class="d-block w-100" alt="..."  width="500" height="870">
-        <div class="carousel-caption d-none d-md-block m-5 " height="60px" style="text-align:center;">          
-          <button class="btn btn-warning " height="870" routerLink="/services">
+         width="500" height="870"  class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block m-5 " style="text-align:center;">          
+          <button class="btn btn-warning position-relative" routerLink="/services">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="16"
@@ -78,6 +80,7 @@
         </div>
       </div>
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -86,6 +89,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
+    
   </div>
 
   <div id="footer">All rights reserved &copy; 2022 Kinal-IN6AV-G1</div>
